tests/ui/env-non-string.stderr
error: expected string literal
 --> $DIR/tests/ui/env-non-string.rs:4:15
  |
4 |     fn [<env!(1.31)>]() {}
  |               ^^^^
